Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/sd15_statefulset/service_inference_sd15.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-sd15-statefulset-service
  labels:
    app: stable-diffusion-sd15-statefulset-service
spec:
  ports:
  - protocol: TCP
    port: 7860
    targetPort: 7860
  clusterIP: None
  selector:
    app: stable-diffusion-sd15-statefulset
