Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/sd15_statefulset/ingress_sd15.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "stable-diffusion-sd15-statefulset-ingress"
  namespace: "default"
spec:
  defaultBackend:
    service:
      name: "stable-diffusion-sd15-statefulset-service"
      port:
        number: 7860
  # rules:
  # - http:
  #     paths:
  #     - path: "/"
  #       backend:
  #         service:
  #           name: "stable-diffusion-sd15-statefulset-service"
  #           port:
  #             number: 7860
  #       pathType: "ImplementationSpecific"
status:
  loadBalancer: {}
